Prøver å få CFX til å virke

--- a/jacJarSoft.noteArkiv.web/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/jacJarSoft.noteArkiv.web/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,3 +1,4 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Sun Sep 27 17:57:58 CEST 2015
+#Tue Oct 27 19:52:04 CET 2015
+org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=../gradleMaster
