--- a/jacJarSoft.noteArkiv.web/.settings/org.eclipse.jdt.core.prefs
+++ b/jacJarSoft.noteArkiv.web/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Sat Sep 26 18:44:17 CEST 2015
+#Tue Oct 27 22:10:27 CET 2015
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.8
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
